...
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.homeScreen.HomeScreenFragment">


        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.homeScreen.HomeScreenFragment">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changes"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
...
                    android:text="@string/changes"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/sync_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/surveys"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/my_changes"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/changes"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dashboard"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/my_team"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onTeamsClicked()}"
                    android:text="@string/my_teams"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/people_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/title_cm"
...
